// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook snapshot tests Storyshots Composites/ChatComposite Basic Example 1`] = `
<div
  className="css-61 body-0"
>
  <div
    className="css-61"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-1"
      >
        <span>
          Please provide the connection string and display name to use.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Composites/ChatComposite Custom Behavior Example 1`] = `
<div
  className="css-61 body-0"
>
  <div
    className="css-61"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-1"
      >
        <span>
          Please provide the connection string and display name to use.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Composites/ChatComposite Custom Data Model Example 1`] = `
<div
  className="css-61 body-0"
>
  <div
    className="css-61"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-1"
      >
        <span>
          Please provide the connection string and display name to use.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Composites/ChatComposite Join Existing Chat Thread 1`] = `
<div
  className="css-61 body-0"
>
  <div
    className="css-61"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-1"
      >
        <span>
          Please provide a token, thread id, endpoint url, and display name to use.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Composites/ChatComposite Theme Example 1`] = `
<div
  className="css-61 body-0"
>
  <div
    className="css-61"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-1"
      >
        <span>
          Please provide the connection string and display name to use.
        </span>
      </div>
    </div>
  </div>
</div>
`;
